Fix wrapping of long tooltips for URLs in analytics tables.
https://github.com/18F/api.data.gov/issues/505

--- a/src/api-umbrella/admin-ui/app/styles/_tooltips.scss
+++ b/src/api-umbrella/admin-ui/app/styles/_tooltips.scss
@@ -15,6 +15,7 @@
 
 .tippy-tooltip {
   text-align: left;
+  word-break: break-word;
 
   p:last-child {
     margin-bottom: 0px;
